--- a/shop.html
+++ b/shop.html
@@ -11,6 +11,10 @@
     <header>
         <img src="/Resources/home.png" height="32"></img>
         <h1>Title</h1>
+        <button type="button" onclick="getCart()">
+            <img src="/Resources/shopping-cart.png" height="32px"></img>
+            <div>My cart</div>
+        </button>
     </header>
 
     <div class="title_desc">
@@ -44,9 +48,26 @@
         </div>
 
         <div class="container" id="container">
+        </div>
     </div>
 
+    <div id="cart">
+        <div id="cart_content">
+            <button class="close_cart" type="button" onclick="getCart()">
+                <img>X</img>
+            </button>
+            
+            <p>Items in cart :</p>
+            <div class="line"></div>
+            <div class="cart_container" id="cart_container">
+            </div>
+
+            <a class="open_cart_page" href="./cart.html" target="_blank">
+                Open cart
+            </a>
+        </div>
     </div>
+    <div id="overlay"></div>
 
     <script src="shop.js"></script>
     <script src="cart.js"></script>
