--- a/shop.html
+++ b/shop.html
@@ -40,7 +40,7 @@
                             <input type="text" id="priceMax" autocomplete="off" onkeyup="filterPriceAbove()" placeholder="Max">
                         </div>
                         <label for="one"><input type="checkbox" id="one" onclick="filterProducts()" />First checkbox</label>
-                        <label for="two"><input type="checkbox" id="two" />Second checkbox</label>
+                        <label for="two"><input type="checkbox" id="two" onclick="filterProducts()" />Second checkbox</label>
                         <label for="three"><input type="checkbox" id="three" />Third checkbox</label>
                     </div>
                 </div>
