--- a/cart.html
+++ b/cart.html
@@ -15,29 +15,31 @@
             <img  src="/Resources/shopping-cart.png" height="32"></img></button>
     </header>
 
-    <div>
-        <p>Items in cart :</p>
-        <div class="line"></div>
-        <div class="container" id="cart_container">
-            <h4 id="cart_empty_text">Your shopping cart is empty, make sure to add products.</h4>
-        </div>
-
-        <button id="order_button"" type="button">Take order</button>
-    </div>
-
-    <div id="cart">
-        <div id="cart_content">
-            <button type="button" width="32" height="32" onclick="getCart()">
-                <img>X</img>
-            </button>
-            
+    <div class="content">
+        <div>
             <p>Items in cart :</p>
             <div class="line"></div>
             <div class="container" id="cart_container">
+                <h4 id="cart_empty_text">Your shopping cart is empty, make sure to add products.</h4>
+            </div>
+
+            <button id="order_button" type="button" onclick="setOrder()">Take order</button>
+        </div>
+
+        <div id="cart">
+            <div id="cart_content">
+                <button type="button" width="32" height="32" onclick="getCart()">
+                    <img>X</img>
+                </button>
+                
+                <p>Items in cart :</p>
+                <div class="line"></div>
+                <div class="container" id="cart_container">
+                </div>
             </div>
         </div>
+        <div id="overlay"></div>
     </div>
-    <div id="overlay"></div>
 
     <script src="cart.js">
     </script>
