Added thumbnail filter and fixed empty max price hiding all products.

--- a/Web/shop.html
+++ b/Web/shop.html
@@ -39,9 +39,9 @@
                             -
                             <input type="text" id="priceMax" autocomplete="off" onkeyup="filterPriceAbove()" placeholder="Max">
                         </div>
-                        <label for="one"><input type="checkbox" id="one" onclick="filterProducts()" />First checkbox</label>
-                        <label for="two"><input type="checkbox" id="two" onclick="filterProducts()" />Second checkbox</label>
-                        <label for="three"><input type="checkbox" id="three" />Third checkbox</label>
+                        <label for="one"><input type="checkbox" id="one" onclick="filterByImage()" />With thumbnail</label>
+                        <!-- <label for="two"><input type="checkbox" id="two" onclick="filterProducts()" />Second checkbox</label>
+                        <label for="three"><input type="checkbox" id="three" />Third checkbox</label> -->
                     </div>
                 </div>
             </form>
